# zamin

./: .gitignore  Cargo.toml  LICENSE  README.md  TUTORIAL.md  build-wasm.sh  build.rs
assets/: make_icon.py
bench/: bench.py  bench.zamin
benchmarks/: bench_lion.lion  bench_python.py  run_benchmarks.bat
docs/: 404.html  advanced-guide.html  faq.html  getting-started.html  gui-guide.html  index.html  language-guide.html  opencv-guide.html  performance.html  playground.html  project-management.html  sitemap.xml  standard-library.html
examples/: cheetah_basic.lion  hello.lion  jaguar_cheetah.lion  leopard_demo.lion  leopard_full.lion  opencv_demo.lion  panda_demo.lion  panther_test.lion  stdlib_extended.lion  textedit.lion
include/: lion.h  zamin.h
installer/: setup.iss
modules/: Makefile  astra.c  example.c
scripts/: package.sh
src/: ast.rs  bytecode.rs  cext.rs  cli.rs  collections_mod.rs  comet_mod.rs  compiler.rs  datetime_mod.rs  gc.rs  hashlib_mod.rs  itertools_mod.rs  jit.rs  leopard_mod.rs  lexer.rs  lib.rs  linum.rs  logging_mod.rs  lsp.rs  luna_mod.rs  main.rs  module.rs  nova_mod.rs  panther_mod.rs  parser.rs  path_mod.rs  py.rs  re_mod.rs  repl.rs  sol_mod.rs  stdlib.rs  subprocess_mod.rs  test_mod.rs  vm.rs  wasm_entry.rs  zamin_rs.rs
tests/: test_assertions.lion  test_autoclose.lion  test_cheetah.lion  test_close.lion  test_collections.lion  test_data.lion  test_datetime.lion  test_debug.lion  test_dict.lion  test_final.lion  test_for.lion  test_for2.lion  test_gfx.lion  test_gfx2.lion  test_gfx3.lion  test_gfx4.lion  test_gfx5.lion  (+26 more)
(+40 files in other folders)
