[package]
name = "lion"
version = "1.5.1"
edition = "2021"
description = "The Lion programming language interpreter"

[dependencies]
pyo3 = { version = "0.29", features = ["auto-initialize"], optional = true }
serde_json = "1.0"
lsp-server = "0.7"
lsp-types = "0.97"
regex = "1"
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.22"
scraper = "0.27"
url = "2"
ureq = "2"

[features]
python = ["pyo3"]
default = []

[[bin]]
name = "lion"
path = "src/main.rs"

[[bin]]
name = "lion-lsp"
path = "src/lsp.rs"
