[package]
name = "zamin"
version = "1.7.0"
edition = "2021"
description = "The Zamin programming language interpreter"

[dependencies]
pyo3 = { version = "0.29", features = ["auto-initialize"], optional = true }
serde_json = "1.0"
lsp-server = "0.7"
lsp-types = "0.97"
regex = "1"
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.22"
scraper = "0.27"
url = "2"
ureq = "2"
gtk4 = { version = "0.9", optional = true }
opencv = { version = "0.99", optional = true }

[features]
python = ["dep:pyo3"]
luna = ["dep:gtk4"]
opencv = ["dep:opencv"]
default = []

[[bin]]
name = "zamin"
path = "src/main.rs"

[[bin]]
name = "zamin-lsp"
path = "src/lsp.rs"

[[bin]]
name = "zamin-rs"
path = "src/zamin_rs.rs"
